--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
             </div>
 
             <div class="mid">            
-                <button class="btn btn-primary" type="button" id="login_btn">Login</button>
+                <button class="btn btn-success" type="button" id="login_btn">Login</button>
                 <br>
                 <span id="login_message"></span>
+                <br>
+                <span style="color : 5cb85c;">Not Registred yet ? <a style="color : white;" href="#">Register Here</a></span>
             </div>
             </form>
 
