--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         
-        <form id="log" >
+        <form id="log" class="offset-md-4 col-md-4 col-xs-12">
             <div class="form-group">
                 <label for="username">Username :</label>
                 <input class="form-control" type="text" name="username" id="username" placeholder="Enter your username" required> 
@@ -39,7 +39,7 @@
             </form>
         
 
-            <div id="register" style ="display :none;">
+            <div id="register" class="offset-md-4 col-md-4 col-xs-12" style ="display :none;">
                 <form >
                     <div class="form-group">
                         <label for="username">Username :</label>
