--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     </head>
 
     <body>
-        
-        <form id="log" class="offset-md-4 col-md-4 col-xs-12">
+        <div id="log" class="offset-md-4 col-md-4 col-xs-12">        <form >
             <div class="form-group">
                 <label for="username">Username :</label>
                 <input class="form-control" type="text" name="username" id="username" placeholder="Enter your username" required> 
@@ -37,7 +36,8 @@
                 <span style="color : 5cb85c;">Not Registred yet ? <a style="color:white;cursor: pointer;" id="displayRegister" >Register Here</a></span>
             </div>
             </form>
-        
+        </div>
+
 
             <div id="register" class="offset-md-4 col-md-4 col-xs-12" style ="display :none;">
                 <form >
